--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Adefeyitimi Adeyeloja"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <title>GodRules Speech and Hearing Rehabilitation Centre</title>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>S</span>haif <span>A</span>rfan</h1>
+            <h1><span>God</span>Rules <span>Rehab</span></h1>
           </a>
         </div>
         <div class="nav-list">
@@ -24,9 +25,9 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
-            <li><a href="#projects" data-after="Projects">Projects</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
+            <li><a href="#services" data-after="Service">Our Mission</a></li>
+            <!-- <li><a href="#projects" data-after="Projects">FAQ</a></li> -->
+            <li><a href="#about" data-after="About">About Us</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
         </div>
@@ -40,10 +41,10 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Arfan <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <h1>GodRules Speech &<span></span></h1>
+        <h1>Hearing Rehabilitation Centre<span></span></h1>
+        <!-- <h1>Arfan <span></span></h1> -->
+        <a href="#projects" type="button" class="cta">Contact Us</a>
       </div>
     </div>
   </section>
@@ -53,12 +54,10 @@
   <section id="services">
     <div class="services container">
       <div class="service-top">
-        <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
+        <h1 class="section-title">Miss<span>ion</span> State<span>ment</span></h1>
+        <p>This is an NGO that gives free rehabilitation on speech and hearing disorders to patients of all ages.</p>
       </div>
-      <div class="service-bottom">
+      <!-- <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
@@ -83,22 +82,22 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
   <!-- End Service Section -->
 
   <!-- Projects Section -->
-  <section id="projects">
+  <!-- <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 class="section-title">Recent <span>Projects</span></h1>
+        <h1 class="section-title">FA<span>Q</span></h1>
       </div>
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
             <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
+            <h2>My child is not yet talking. How do I know if he needs help of if he is just a late talker?</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -157,26 +156,22 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Projects Section -->
 
   <!-- About Section -->
   <section id="about">
     <div class="about container">
       <div class="col-left">
-        <div class="about-img">
+        <!-- <div class="about-img">
           <img src="./img/img-2.png" alt="img">
-        </div>
+        </div> -->
       </div>
       <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
+        <h1 class="section-title">About <span>Us</span></h1>
+        <h2>GodRules Rehab Services</h2>
+        <p>This is a non-profit organization that provides free speech and hearing rehabilitation to patients of all ages. At the GodRules Rehab Centre, we work hard to ensure that every patient we meet has the best possible hearing care and treatment!</p>
+        <a href="#contact" class="cta">Contact Us</a>
       </div>
     </div>
   </section>
@@ -193,23 +188,23 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
           <div class="contact-info">
             <h1>Phone</h1>
-            <h2>+1 234 123 1234</h2>
-            <h2>+1 234 123 1234</h2>
+            <h2>+2348055111050</h2>
+            <h2>+2348052411818</h2>
+            <h2>+2348084285101</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>info@gmail.com</h2>
-            <h2>abcd@gmail.com</h2>
+            <h2>godrulesrehab@gmail.com</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Fatikchhari, Chittagong, Bangladesh</h2>
+            <h2>Dr Ogundiran's Residence, Egbedi-Osun State, Nigeria.</h2>
           </div>
         </div>
       </div>
@@ -221,9 +216,9 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>S</span>haif <span>A</span>rfan</h1>
+        <h1><span>God</span>Rules Speech<span> and Hearing Rehabilitation </span>Centre</h1>
       </div>
-      <h2>Your Complete Web Solution</h2>
+      <h2>We offer the best of Quality rehab services.</h2>
       <div class="social-icon">
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
@@ -234,11 +229,8 @@
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
         </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
-        </div>
       </div>
-      <p>Copyright © 2020 Arfan. All rights reserved</p>
+      <p>Copyright © <span id="date"></span> God Rules Rehab. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
